UI Sprint after complete redesign to improve UX

--- a/D3_JS_Charts/index.html
+++ b/D3_JS_Charts/index.html
@@ -17,8 +17,8 @@
 	<script src="data_parse.js"></script>    
 	<script src="RadarChart.js"></script>
 	<script src="Bar_Chart.js"></script>
-	<script src="simpleBarChart.js"></script>
-	<script src="groupedBarChart.js"></script>
+	<script src="../static/Script/simpleBarChart.js"></script>
+	<script src="../static/Script/groupedBarChart.js"></script>
 	<style>
 		body {
 		  overflow: hidden;
