sample bar and radar charts working with test data in d3.v5

--- a/D3_JS_Charts/index.html
+++ b/D3_JS_Charts/index.html
@@ -17,8 +17,8 @@
 	<script src="data_parse.js"></script>    
 	<script src="RadarChart.js"></script>
 	<script src="Bar_Chart.js"></script>
-	<script src="../static/Script/simpleBarChart.js"></script>
-	<script src="../static/Script/groupedBarChart.js"></script>
+	<script src="simpleBarChart.js"></script>
+	<script src="groupedBarChart.js"></script>
 	<style>
 		body {
 		  overflow: hidden;
@@ -50,7 +50,7 @@
     <div id="body">
 	  <div id="chart"></div>
     </div>
-	<button onclick="simpleBarChart()">Bar Chart</button>
+	<button onclick="groupedBar()">Bar Chart</button>
 	<button onclick="radar()">Radar Chart</button>
     <script type="text/javascript" src="script.js"></script>
 
