--- a/D3_JS_Charts/index.html
+++ b/D3_JS_Charts/index.html
@@ -9,6 +9,7 @@
 	<script src="Bar_Chart.js"></script>
 	<script src="simpleBarChart.js"></script>
 	<script src="groupedBarChart.js"></script>
+	<script src="https://www.gstatic.com/charts/loader.js"></script>
 	<style>
 		body {
 		  overflow: hidden;
@@ -35,8 +36,8 @@
 		}
 	</style>
 	<style type="text/css">
-		#left-div {float:left; width:35%; height:100%;}
-		#right-div {float:left; width:65%; height:100%;}
+		#left-div {float:left; width:50%; height:100%;}
+		#right-div {float:left; width:50%; height:100%;}
 		/* #chart-div {float:right; background:yellow; width:100%; height:100%} */
 		.mainsection {width:100%; color:green; background:red; float:left}
 		.svg {margin-left:20px; width:100%; height:100%;}
@@ -55,6 +56,7 @@
 		}
 	</style>
   </head>
+
   <body>
 	<div id='left-div'>
 		<div class="mainsection">
@@ -62,6 +64,7 @@
 			The class attribute is used to identify which style to apply.<br>
 			The style is defined in the head section.
 		</div>
+		<div id="table_div"></div>
 	</div>
 	<div id="right-div">
 		<div id="chart-div"></div>
